--- a/nifi-nar-bundles/nifi-hive-bundle/pom.xml
+++ b/nifi-nar-bundles/nifi-hive-bundle/pom.xml
@@ -20,11 +20,11 @@
     <parent>
         <groupId>org.apache.nifi</groupId>
         <artifactId>nifi-nar-bundles</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>0.6.0</version>
     </parent>
 
     <artifactId>nifi-hive-bundle</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>0.6.0</version>
     <packaging>pom</packaging>
 
     <modules>
